changed .site-header background to black to fix contrast issues

--- a/art128/motherland/css/style.css
+++ b/art128/motherland/css/style.css
@@ -306,7 +306,7 @@ body {
 .site-header {
     padding: .5em 1.5em .5em 2.5em; /* this is my header padding */
     position: absolute;
-    color: transparent;
+    color: black;
     width: 100%;
     align-items: baseline;
 }
